# first-ray-perspective

./: .gitignore  CMakeLists.txt  README.md  temp.cpp  vagrind_check.sh
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt  first-ray-perspective.cpp  raylib-example.cpp
apps/constructions/: box.hpp  cornell_box.hpp
include/: Scene.hpp  Window.hpp  camera.hpp  headers.hpp  hit_record.hpp  material.hpp  perlin.hpp  ray.hpp  rtw_stb_image.hpp  texture.hpp  utils.hpp  vec3.hpp  vec4.hpp
include/math/: interval.hpp  mat4.hpp  vec3.hpp  vec4.hpp
include/objects/: Object.hpp  ObjectsList.hpp  Sphere.hpp  aabb.hpp  bvh.hpp  hittable.hpp  hittable_list.hpp  quad.hpp  sphere.hpp
src/: CMakeLists.txt  Window.cpp  camera.cpp  hello_openmp.cpp  hit_record.cpp  ray.cpp  vec3.cpp  vec4.cpp
src/math/: interval.cpp  mat4.cpp  vec3.cpp  vec4.cpp
src/objects/: ObjectsList.cpp  Sphere.cpp  aabb.cpp  hittable_list.cpp  quad.cpp  sphere.cpp
tests/: CMakeLists.txt  test_main.cpp  test_vec3.cpp  test_vec4.cpp
